--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <main>
         <!----------------------- featured bike section -------------------->
 
-        <section class="justify-content-center row-cols-1 row row-cols-md-2 row-cols-lg-3">
+        <section class="justify-content-center row-cols-1 row-cols-md-2 row-cols-lg-1">
             <h2 class="py-3 ms-4 text-center">Fetured Bikes 2021</h2>
             <h6 class="text-center fc">Best Bike Collection</h6>
             <div class="container flex d-flex items-center justify-around py-12 px-4">
@@ -377,8 +377,8 @@
 
     <!---------------------------------------------------- footer section ------------------------------------->
 
-    <footer class="row-cols-1 row-cols-md-2 row-cols-lg-3 bg-dark text-center text-white">
-        <section class="mb-4 row-cols-1 row-cols-md-1 row-cols-lg-2">
+    <footer class=" bg-dark text-center text-white">
+        <section class="row-cols-1 row-cols-md-2 row-cols-lg-1 mb-4">
             <div class="container p-4">
 
                 <!-- Facebook -->
@@ -456,8 +456,9 @@
                     © 2022 Copyright:
                     <a class="text-reset fw-bold" href="">www.bikecbr.com</a>
                 </div>
+            </div>
         </section>
-        </div>
+
 
     </footer>
 
